--- a/app/src/main/res/layout/item_asteroid.xml
+++ b/app/src/main/res/layout/item_asteroid.xml
@@ -40,7 +40,9 @@
             app:layout_constraintTop_toTopOf="parent"
             android:textStyle="bold"
             tools:text="68347 (2001 KB67)"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:text="@{asteroid.codename}"
+            android:textColor="@color/default_text_color"/>
 
         <TextView
             android:id="@+id/tv_date"
@@ -54,6 +56,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_asteroid_name" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_asteroid_name"
+            android:text="@{asteroid.closeApproachDate}"
+            android:textColor="@color/default_text_color"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
