--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -28,7 +28,9 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/placeholder_picture_of_day"/>
+                app:srcCompat="@drawable/placeholder_picture_of_day"
+                app:pictureOfDay="@{viewModel.pictureOfDay}"
+                android:contentDescription="@{@string/nasa_picture_of_day_content_description_format(viewModel.pictureOfDay.title)}" />
 
             <TextView
                 android:id="@+id/textView"
